--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Site</h1>
+        <h1>OK Site++</h1>
         <p>Creation of a Badass Website</p>
         <p class="view"><a href="https://github.com/un1v3rs3/site">View the Project on GitHub <small>un1v3rs3/site</small></a></p>
         <ul>
